# haikufinder

./: README.md  pyproject.toml  ulysses.txt
haikufinder/: __init__.py  cli.py
haikufinder/cmudict/: PickleCMUDict.py  cmudict.pickle
tests/: conftest.py  test_find_haikus.py  test_syllables.py
